# pico-prac

./: CMakeLists.txt  README.md  main.c
hardware/pico-univ/: fp-info-cache  pico-univ.sch  pico-univ.sch-bak
pico-buzz/: CMakeLists.txt  README.md  main.cpp
pico-buzz/lib/: melodict.cpp  melodict.hpp  melodine.cpp  melodine.hpp
pico-buzz/src/: main.cpp
pico-gpio/: CMakeLists.txt  README.md  main.c
pico-hid/: CMakeLists.txt  dev_hid_composite.c  dev_hid_composite.h  main.c  main.h
pico-i2c/: README.md  note.md
pico-i2c/lib/: lcd.h  main.h  main.hpp
pico-i2c/src/: lcd.c  main.c  main.cpp
pico-prac/: CMakeLists.txt  README.md
